# api-app-tt

./: README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
src/main/: app.py
src/utils/api/: api.py
src/utils/config/: initialise_config.py
src/utils/transformation/: filter_outages.py  generate_result.py
tests/events/outages/: invalid_outages.json  valid_outages.json
tests/events/output/: invalid_output.json  valid_output.json
tests/events/site-info/: invalid_site_info.json  valid_site_info.json
tests/integration/: test_e2e_app.py
tests/unit/: test_methods.py
